--- a/CechCohomologyLineBundles/ComplexGeometryNotes.tex
+++ b/CechCohomologyLineBundles/ComplexGeometryNotes.tex
@@ -10,6 +10,7 @@
 \usepackage{mathrsfs}
 \usepackage{amsthm}
 \usepackage{mathpazo}
+\usepackage[mathcal]{eucal}
 \usepackage{float}
 \usepackage[backend=biber]{biblatex}
 \addbibresource{bibliography.bib}
@@ -253,6 +254,12 @@
 \input{src/ChernConnection.tex}
 %
 \input{src/VanishingTheorems.tex}
+%
+\input{src/MapsToProjectiveSpace.tex}
+%
+\input{src/BlowUp.tex}
+%
+\input{src/KodairaEmbedding.tex}
 %
 \newpage
 %
