--- a/CechCohomologyLineBundles/src/VanishingTheorems.tex
+++ b/CechCohomologyLineBundles/src/VanishingTheorems.tex
@@ -313,8 +313,8 @@ sufficiently large choice of $m$ will make $m(n-(p+q))$ sufficiently negative
 such that the only we we can have $\alpha = 0$.
 \end{proof}
 %
-With the Kodaira-Nakano Vanishing Theorem and more help from Hodge theory, we have
-anotherway to compute the sheaf cohomology of line bundles over $\CP^n$. To
+With the Kodaira-Nakano vanishing theorem and more help from Hodge theory, we have
+another way to compute the sheaf cohomology of line bundles over $\CP^n$. To
 do this we note two facts.
 \begin{enumerate}
   \item $\O(1)$ is a positive line bundle.
@@ -340,7 +340,7 @@ H^{n-q}(X, E^*\otimes K_X) \cong H^q(X,E)^*
 \]
 \end{thm}
 %
-We then apply the Kodaira-Nakano Vanishing Theorem to deduce which cohomology
+We then apply the Kodaira-Nakano vanishing theorem to deduce which cohomology
 groups are $0$. For $m > 0$, the vanishing theorem tells us that for $p+q > n$, we have
 $H^q(\CP^n,\Omega^{p,0} \otimes \O(m)) = 0$. Then since $\Omega^{n,0} = K_X = \O(-n-1)$,
 this tells us that $H^q(\CP^n,\O(m)) = 0$ for $q > 0$ and $m \geq -n$. Serre duality
