--- a/VariationHodge/bibliography.bib
+++ b/VariationHodge/bibliography.bib
@@ -4,3 +4,47 @@
       journal        = "Cambridge University Press",
       year           = "2002"
 }
+@book{Huybrechts,
+      author         = "Huybrechts, D.",
+      title          = "{Complex Geometry}",
+      journal        = "Springer",
+      year           = "2005"
+}
+@book{GriffithsHarris,
+      author         = "Griffiths, P. and Harris, J.",
+      title          = "{Principles of Algebraic Geometry}",
+      journal        = "Wiley",
+      year           = "1978"
+}
+@article{SimpsonHiggsBundles,
+     author = {Simpson, Carlos},
+     title = {Higgs bundles and local systems},
+     journal = {Publications Math\'ematiques de l'IH\'ES},
+     publisher = {Institut des Hautes \'Etudes Scientifiques},
+     volume = {75},
+     year = {1992},
+     pages = {5-95},
+     zbl = {0814.32003},
+     mrnumber = {94d:32027},
+     language = {en},
+     url = {http://www.numdam.org/item/PMIHES_1992__75__5_0}
+}
+@article{SimpsonYangMills,
+	Abstract = {We define a notion of a stable system of Hodge bundles. A stable system of Hodge bundles has a Hermitian-Yang-Mills metric and, if certain Chern classes vanish, this gives a complex variation of Hodge structure. We use these ideas to obtain a criterion for a variety to be uniformized by a bounded symmetric domain.},
+	Author = {Simpson, Carlos T. },
+	Da = {1987/11/01},
+	Date-Added = {2020-05-02 18:49:03 -0400},
+	Date-Modified = {2020-05-02 18:49:03 -0400},
+	Doi = {10.1007/BF00402147},
+	Id = {Simpson1987},
+	Isbn = {1573-0530},
+	Journal = {Letters in Mathematical Physics},
+	Number = {4},
+	Pages = {371--377},
+	Title = {Yang-Mills theory and uniformization},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1007/BF00402147},
+	Volume = {14},
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF00402147}}
+}
